--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
@@ -10,7 +9,7 @@
     <parent>
         <groupId>net.codjo.pom</groupId>
         <artifactId>codjo-pom-application</artifactId>
-        <version>SNAPSHOT</version>
+        <version>2.45</version>
     </parent>
     <groupId>net.codjo.tools.farow</groupId>
     <artifactId>codjo-tools-farow</artifactId>
@@ -172,17 +171,14 @@
                                 <phase>install</phase>
                                 <configuration>
                                     <tasks>
-                                        <sshexec host="wp-documentation" username="DEV4D"
-                                                 keyfile="${developmentPortalSshKey}" passphrase="" trust="true"
-                                                 command="rm -rf /cygdrive/d/Dev/platform/tools/tomcat/tomcat-6.0.18/webapps/webdav/codjo-tools-farow/*"/>
+                                        <sshexec host="wp-documentation" username="DEV4D" keyfile="${developmentPortalSshKey}" passphrase="" trust="true" command="rm -rf /cygdrive/d/Dev/platform/tools/tomcat/tomcat-6.0.18/webapps/webdav/codjo-tools-farow/*" />
 
-                                        <scp todir="DEV4D@wp-documentation:/cygdrive/d/Dev/platform/tools/tomcat/tomcat-6.0.18/webapps/webdav/codjo-tools-farow"
-                                             keyfile="${developmentPortalSshKey}" passphrase="">
+                                        <scp todir="DEV4D@wp-documentation:/cygdrive/d/Dev/platform/tools/tomcat/tomcat-6.0.18/webapps/webdav/codjo-tools-farow" keyfile="${developmentPortalSshKey}" passphrase="">
                                             <fileset dir="${project.basedir}/target/jnlp">
-                                                <include name="**/*.*"/>
+                                                <include name="**/*.*" />
                                             </fileset>
                                             <fileset dir="${project.basedir}/target/config">
-                                                <include name="OrdonnencementLib.properties"/>
+                                                <include name="OrdonnencementLib.properties" />
                                             </fileset>
                                         </scp>
                                     </tasks>
