--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     </parent>
     <groupId>net.codjo.tools.farow</groupId>
     <artifactId>codjo-tools-farow</artifactId>
-    <version>2.5</version>
+    <version>2.6-SNAPSHOT</version>
     <dependencies>
         <dependency>
             <groupId>net.codjo.util</groupId>
