--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>net.codjo.pom</groupId>
         <artifactId>codjo-pom-application</artifactId>
-        <version>SNAPSHOT</version>
+        <version>2.52</version>
     </parent>
     <groupId>net.codjo.tools.farow</groupId>
     <artifactId>codjo-tools-farow</artifactId>
